--- a/index.html
+++ b/index.html
@@ -2,50 +2,53 @@
 <html lang="mn">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>З.Золбаярын Нэрийн Хуудас</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #e0c3fc, #8ec5fc);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
+      padding: 16px;
     }
     .card {
-      background: white;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      background: #ffffff;
+      border-radius: 20px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
       padding: 32px;
-      max-width: 400px;
+      max-width: 480px;
       width: 100%;
       text-align: center;
     }
     .card h1 {
       margin: 0;
-      font-size: 24px;
-      color: #333;
+      font-size: 32px;
+      color: #2b2b2b;
     }
     .card h2 {
-      margin: 4px 0;
-      font-size: 18px;
-      color: #666;
+      margin: 6px 0;
+      font-size: 22px;
+      color: #555;
     }
     .card h3 {
-      margin: 4px 0 16px;
-      font-size: 16px;
-      color: #888;
+      margin: 6px 0 20px;
+      font-size: 18px;
+      color: #777;
     }
     .card p {
-      margin: 8px 0;
-      font-size: 15px;
+      margin: 10px 0;
+      font-size: 16px;
     }
     .card p span {
       font-weight: bold;
+      color: #444;
     }
     a {
-      color: #0066cc;
+      color: #0077ff;
       text-decoration: none;
     }
     a:hover {
